--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "react": "19.2.0",
     "react-confetti-boom": "^2.0.1",
     "react-dom": "19.2.0",
+    "react-phone-number-input": "^3.4.14",
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^4.0.0",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
